--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-\Data_Collect_32\data
+Data_Collect_32/data/
 
-\Data_Collect_32\mlruns
+Data_Collect_32/mlruns/
 
 
-\Data_Collect_32\obj
+Data_Collect_32/obj/
