--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Data_Collect_32/obj/
 Data_Collect_32/bin/
 Data_Collect_32/src/__pycache__/
 __pycache__/
+Data_Collect_32/src/Evaluate/__pycache__/
+Data_Collect_32/src/model/__pycache__/
+Data_Collect_32/src/process_date/__pycache__/
