--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ Data_Collect_32/src/Evaluate/__pycache__/
 Data_Collect_32/src/model/__pycache__/
 Data_Collect_32/src/process_data/__pycache__/
 Data_Collect_32/Artifact_trading/
-Data_Collect_32/obj/
+Data_Collect_32/obj/Debug/net6.0/*
