--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Data_Collect_32/src/process_data/__pycache__/
 Data_Collect_32/Artifact_trading/
 Data_Collect_32/obj/	
 Data_Collect_32/obj/
+Data_Collect_32/mlartifacts/
