--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Data_Collect_32/Artifact_trading/
 Data_Collect_32/obj/	
 Data_Collect_32/obj/
 Data_Collect_32/mlartifacts/
+Data_Collect_32/mlruns/
