--- a/Data_Collect_32/conf/config.yaml
+++ b/Data_Collect_32/conf/config.yaml
@@ -18,13 +18,14 @@ Data_Source: './data/Unprocessed_Data.csv'
 model:
   model_params:
     learning_rate: 0.5
-    max_depth: 5
+    max_depth: 10
     min_samples_leaf: 1
     max_leaf_nodes: 66
     l2_regularization: 10
     max_bins: 25
-    max_iter: 5
+    max_iter: 150
     random_state: 1
-  feature_depth: 4
+    class_weight: "balanced"
+  feature_depth: 49
 
 
