--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,28 +1,36 @@
 data_pipeline:
- _target_: ProcessData.data_pipeline.PandasDataPipeline
+ _target_: model_forge.data.datapipeline.PandasDataPipeline
  steps: 
   -
-   _target_: ProcessData.data_cleaning.shift_close
+   _target_: forex_trader.ProcessData.data_cleaning.shift_close
    _partial_: true
   - 
-    _target_: ProcessData.data_cleaning.create_label
+    _target_: forex_trader.ProcessData.data_cleaning.create_label
     _partial_: true
 
 
 
 Data_Source: 'data/Unprocessed_Data.csv'   
-  
+
+
 model:
-  model_params:
-    learning_rate: 0.1
-    max_depth: 150
-    min_samples_leaf: 10
-    max_leaf_nodes: 60
-    l2_regularization: 10
-    max_bins: 25
-    max_iter: 2500
-    random_state: 2
-    verbose: 0
-    early_stopping: True
-    class_weight: 'balanced'
-  feature_depth: 10
+  model_steps: 
+
+  - select_features:
+      _target_: forex_trader.Model.SklearnPipeline.FeatureSelector
+      features: ['rsi'  , 'tv', 'sma', 'williams', 'regrs', 'cci', 'close_price', 'open_price', 'high_price', 'low_price' ]
+      depth: 10
+  
+  - HistGradientBoostingClassifier:
+      _target_: sklearn.ensemble.HistGradientBoostingClassifier
+      learning_rate: 0.05723818391467435
+
+      verbose: 0
+      class_weight: balanced
+      max_iter: 3997
+      l2_regularization: 2.525756277489002
+      early_stopping: True
+      max_leaf_nodes: 106
+      max_bins: 196
+      max_depth: 605
+      random_state: 42
