--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -7,6 +7,9 @@ data_pipeline:
   - 
     _target_: forex_trader.ProcessData.data_cleaning.create_label
     _partial_: true
+  -
+    _target_: forex_trader.ProcessData.splits.train_test.add_train_test_indixes
+    _partial_: true
 
 
 
