--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,4 @@ __pycache__/
 /build/
 # TODO: Fix this
 /artifacts/
-artifacts/
-artifacts/**
-artifacts/Density/
-artifacts
-/artifacts/Precision-Recall/*.jpeg
-*/artifacts/*
-**/artifacts/**
-./artifacts 
-*.jpeg
+**.pkl
