--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -13,7 +13,7 @@ data_pipeline:
 
 
 
-Data_Source: 'data/Unprocessed_Data.csv'   
+Data_Source: '../data/Unprocessed_Data.csv'   
 
 
 model:
@@ -22,18 +22,19 @@ model:
   - select_features:
       _target_: forex_trader.Model.SklearnPipeline.FeatureSelector
       features: ['rsi'  , 'tv', 'sma', 'williams', 'regrs', 'cci', 'close_price', 'open_price', 'high_price', 'low_price' ]
-      depth: 10
-  
-  - HistGradientBoostingClassifier:
-      _target_: sklearn.ensemble.HistGradientBoostingClassifier
-      learning_rate: 0.05723818391467435
+      depth: 40
 
-      verbose: 0
+  - HistGradientBoostingClassifier:
+      _target_: forex_trader.Model.booster.HistBooster
+      learning_rate: 0.15723818391467435
       class_weight: balanced
+      verbose: 0
       max_iter: 3997
-      l2_regularization: 2.525756277489002
+      l2_regularization: 20
       early_stopping: True
       max_leaf_nodes: 106
       max_bins: 196
       max_depth: 605
       random_state: 42
+  - calibrator:
+      _target_: sklearn.calibration.CalibratedClassifierCV
