--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ seaborn = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs = "^1.6.0"
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
