--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11.5"
+python = ">=3.11.5,<3.12"
 scikit-learn = "^1.4.2"
 pandas = "^1.2.2"
 mlflow = "^2.12.1"
